# Kawasaki_Dynamics

./: .gitignore  CMakeLists.txt  Ising.c  README.md  Vapour_model.c  XY_Model.c  XY_model_gpu.c  build_main.bat  gpu_loader.c  gpu_loader.h  ising_gpu.exp  ising_gpu.lib  ising_gpu_loader.c  ising_gpu_loader.h  ising_hysteresis.c  ising_hysteresis_gpu.c  xy_hysteresis_gpu.c
Scripts/: build_all.bat  run_ising_cpu_hysteresis.bat  run_ising_gpu_hysteresis.bat  run_ising_interactive.bat  run_plotter.bat  run_xy_gpu_hysteresis.bat  run_xy_interactive.bat
gpu_plugin/: build.bat  ising_gpu.cu  xy_gpu.cu
plotter/: plot_hysteresis.py
utils/: pcg_random.c  pcg_random.h
